# finfmt-rs

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE  README.md  commitlint.config.cjs
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml
benches/: bertlv.rs  bitmap.rs  bytes.rs  decimal.rs  ebcdic.rs  int.rs  nibble.rs  text.rs  validation.rs
examples/: nibss.rs
examples/codecs/: nibss.rs
src/: bitmap.rs  lib.rs  scalarfmt.rs  types.rs  utils.rs
src/asm/: bertlv.rs  bitmap.rs  bytes.rs  decimal.rs  ebcdic.rs  int.rs  mod.rs  nibble.rs  text.rs  validation.rs
src/composite/: bertlv.rs  bertlv_macros.rs  bertlv_serde.rs  bitmap_macros.rs  concat_macros.rs  delimited_macros.rs  enum_macros.rs  mod.rs  repeated.rs  scalar.rs  scalar_serde.rs  wrappers.rs
src/field/: check.rs  ebcdic.rs  format.rs  length.rs  mod.rs  nibble.rs  numeric.rs  step.rs  text.rs
src/primitive/: bertlv.rs  bitmap.rs  bytes.rs  decimal.rs  ebcdic.rs  int.rs  mod.rs  nibble.rs  text.rs  validation.rs
