[package]
name = "finfmt"
version = "0.1.0"
edition = "2024"
description = "Zero-allocation financial message encoding and decoding library"
readme = "README.md"
license = "MIT"
repository = "https://github.com/nakedible/finfmt-rs"
rust-version = "1.92"
keywords = ["iso8583", "apacs", "financial", "ebcdic", "encoding"]
categories = ["encoding", "parser-implementations"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/src/**",
    "/examples/**",
    "/benches/**",
]

[features]
asm-inspect = []
no-panic = ["dep:no-panic"]

[dependencies]
arrayvec = { version = "0.7.6", features = ["serde"] }
bitmaps = "3.2.1"
bytes = "1.10.1"
compact_str = { version = "0.8", features = ["serde"] }
no-panic = { version = "0.1", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
itoa = "1.0"
proptest = "1.5"
zenbench = "0.1"

[[bench]]
name = "bytes"
harness = false
required-features = ["asm-inspect"]

[[bench]]
name = "decimal"
harness = false
required-features = ["asm-inspect"]

[[bench]]
name = "ebcdic"
harness = false
required-features = ["asm-inspect"]

[[bench]]
name = "int"
harness = false
required-features = ["asm-inspect"]

[[bench]]
name = "nibble"
harness = false
required-features = ["asm-inspect"]

[[bench]]
name = "text"
harness = false
required-features = ["asm-inspect"]

[[bench]]
name = "bertlv"
harness = false
required-features = ["asm-inspect"]

[[bench]]
name = "bitmap"
harness = false
required-features = ["asm-inspect"]

[[bench]]
name = "validation"
harness = false
required-features = ["asm-inspect"]

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
