[package]
name = "finfmt"
version = "0.1.0"
edition = "2024"
description = "Zero-allocation financial message encoding and decoding library"
readme = "README.md"
license = "MIT"
repository = "https://github.com/nakedible/finfmt-rs"
rust-version = "1.92"
keywords = ["iso8583", "apacs", "financial", "ebcdic", "encoding"]
categories = ["encoding", "parser-implementations"]
include = [
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/LICENSE",
    "/README.md",
    "/src/**",
    "/examples/**",
    "/benches/**",
]

[features]
asm-inspect = []
no-panic = ["dep:no-panic"]

[dependencies]
compact_str = { version = "0.9.1", features = ["serde"] }
no-panic = { version = "0.1.36", optional = true }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
proptest = "1.11.0"
serde_json = "1.0.150"
zenbench = "0.1.8"

[[bench]]
name = "bytes"
harness = false
required-features = ["asm-inspect"]

[[bench]]
name = "decimal"
harness = false
required-features = ["asm-inspect"]

[[bench]]
name = "ebcdic"
harness = false
required-features = ["asm-inspect"]

[[bench]]
name = "int"
harness = false
required-features = ["asm-inspect"]

[[bench]]
name = "nibble"
harness = false
required-features = ["asm-inspect"]

[[bench]]
name = "text"
harness = false
required-features = ["asm-inspect"]

[[bench]]
name = "bertlv"
harness = false
required-features = ["asm-inspect"]

[[bench]]
name = "bitmap"
harness = false
required-features = ["asm-inspect"]

[[bench]]
name = "validation"
harness = false
required-features = ["asm-inspect"]

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
